<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.haleysoftware.fabrickeeper.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_fabric_main"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_description" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_keywords" />

                <TextView
                    android:id="@+id/tv_keywords"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_location" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_projects" />

                <TextView
                    android:id="@+id/tv_projects"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_yards" />

                <TextView
                    android:id="@+id/tv_yards"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_width" />

                <TextView
                    android:id="@+id/tv_fabric_width"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_name" />

                <TextView
                    android:id="@+id/tv_fabric_name"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_designer" />

                <TextView
                    android:id="@+id/tv_designer"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextDisplayLeft"
                    android:text="@string/view_purchased" />

                <TextView
                    android:id="@+id/tv_purchased"
                    style="@style/TextDisplayRight" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/adSpacer"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>